--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                 <br/> Certificate: U/A 13+
                 <br/>  IMDb rating: 8.4
                 <br/> <br/>
-                <button class="btn" type="button"> <a href="https://bit.ly/3pRl7rK" > Watch now! </a> </button>
+                
+                     <button  class="btn" onclick="window.location.href = 'https://bit.ly/3pRl7rK';" > Watch now! </button>
             </div>
             </div>
         </div>
